phase I/CS4240-PhaseI/output/TigerParser.java
// $ANTLR 3.5.1 /Users/twb/repos/Tiger/Tiger.g 2014-10-08 18:59:05

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class TigerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARRAY", "ASSIGN", "BEGIN", 
		"BLOCK", "BREAK", "COLON", "COMMA", "COMMENT", "DIV", "DO", "ELSE", "END", 
		"ENDDO", "ENDIF", "EQ", "EXPRS", "FIXEDPT", "FIXEDPTLIT", "FOR", "FUNCTION", 
		"FUNCTIONS", "GEQ", "GREATER", "ID", "IDS", "IF", "INT", "INTLIT", "INVOKE", 
		"LBRACK", "LEQ", "LESSER", "LPAREN", "MAIN", "MINUS", "MULT", "NEQ", "OF", 
		"OR", "PARAM", "PARAMS", "PLUS", "PROGRAM", "RBRACK", "REFERENCE", "RETURN", 
		"RPAREN", "SEMI", "STATEMENTS", "THEN", "TO", "TYPE", "TYPES", "VAR", 
		"VARIABLES", "VOID", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ARRAY=5;
	public static final int ASSIGN=6;
	public static final int BEGIN=7;
	public static final int BLOCK=8;
	public static final int BREAK=9;
	public static final int COLON=10;
	public static final int COMMA=11;
	public static final int COMMENT=12;
	public static final int DIV=13;
	public static final int DO=14;
	public static final int ELSE=15;
	public static final int END=16;
	public static final int ENDDO=17;
	public static final int ENDIF=18;
	public static final int EQ=19;
	public static final int EXPRS=20;
	public static final int FIXEDPT=21;
	public static final int FIXEDPTLIT=22;
	public static final int FOR=23;
	public static final int FUNCTION=24;
	public static final int FUNCTIONS=25;
	public static final int GEQ=26;
	public static final int GREATER=27;
	public static final int ID=28;
	public static final int IDS=29;
	public static final int IF=30;
	public static final int INT=31;
	public static final int INTLIT=32;
	public static final int INVOKE=33;
	public static final int LBRACK=34;
	public static final int LEQ=35;
	public static final int LESSER=36;
	public static final int LPAREN=37;
	public static final int MAIN=38;
	public static final int MINUS=39;
	public static final int MULT=40;
	public static final int NEQ=41;
	public static final int OF=42;
	public static final int OR=43;
	public static final int PARAM=44;
	public static final int PARAMS=45;
	public static final int PLUS=46;
	public static final int PROGRAM=47;
	public static final int RBRACK=48;
	public static final int REFERENCE=49;
	public static final int RETURN=50;
	public static final int RPAREN=51;
	public static final int SEMI=52;
	public static final int STATEMENTS=53;
	public static final int THEN=54;
	public static final int TO=55;
	public static final int TYPE=56;
	public static final int TYPES=57;
	public static final int VAR=58;
	public static final int VARIABLES=59;
	public static final int VOID=60;
	public static final int WHILE=61;
	public static final int WS=62;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TigerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TigerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return TigerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/twb/repos/Tiger/Tiger.g"; }


	    private  java.util.List<String> errors = new java.util.LinkedList<String>();
	    public   void displayRecognitionError(String[] tokenNames,
	                                        RecognitionException e) {
	        String hdr = getErrorHeader(e);
	        String msg = getErrorMessage(e, tokenNames);
	        errors.add(hdr + " " + msg + "            Character at which the error occurred: " +  "['" + Character.toString((char)e.c) + "']");
	    }
	    public java.util.List<String> getErrors() {
	        return errors;
	    }


	public static class tiger_program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "tiger_program"
	// /Users/twb/repos/Tiger/Tiger.g:60:1: tiger_program : ( type_declaration_list function_declaration_list EOF ) -> ^( PROGRAM ( type_declaration_list )? function_declaration_list ) ;
	public final TigerParser.tiger_program_return tiger_program() throws RecognitionException {
		TigerParser.tiger_program_return retval = new TigerParser.tiger_program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF3=null;
		ParserRuleReturnScope type_declaration_list1 =null;
		ParserRuleReturnScope function_declaration_list2 =null;

		Object EOF3_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_function_declaration_list=new RewriteRuleSubtreeStream(adaptor,"rule function_declaration_list");
		RewriteRuleSubtreeStream stream_type_declaration_list=new RewriteRuleSubtreeStream(adaptor,"rule type_declaration_list");

		try {
			// /Users/twb/repos/Tiger/Tiger.g:61:2: ( ( type_declaration_list function_declaration_list EOF ) -> ^( PROGRAM ( type_declaration_list )? function_declaration_list ) )
			// /Users/twb/repos/Tiger/Tiger.g:61:4: ( type_declaration_list function_declaration_list EOF )
			{
			// /Users/twb/repos/Tiger/Tiger.g:61:4: ( type_declaration_list function_declaration_list EOF )
			// /Users/twb/repos/Tiger/Tiger.g:61:5: type_declaration_list function_declaration_list EOF
			{
			pushFollow(FOLLOW_type_declaration_list_in_tiger_program139);
			type_declaration_list1=type_declaration_list();
			state._fsp--;

			stream_type_declaration_list.add(type_declaration_list1.getTree());
			pushFollow(FOLLOW_function_declaration_list_in_tiger_program141);
			function_declaration_list2=function_declaration_list();
			state._fsp--;

			stream_function_declaration_list.add(function_declaration_list2.getTree());
			EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_tiger_program143);  
			stream_EOF.add(EOF3);

			}

			// AST REWRITE
			// elements: type_declaration_list, function_declaration_list
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 61:58: -> ^( PROGRAM ( type_declaration_list )? function_declaration_list )
			{
				// /Users/twb/repos/Tiger/Tiger.g:61:61: ^( PROGRAM ( type_declaration_list )? function_declaration_list )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				// /Users/twb/repos/Tiger/Tiger.g:61:71: ( type_declaration_list )?
				if ( stream_type_declaration_list.hasNext() ) {
					adaptor.addChild(root_1, stream_type_declaration_list.nextTree());
				}
				stream_type_declaration_list.reset();

				adaptor.addChild(root_1, stream_function_declaration_list.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "tiger_program"


	public static class type_declaration_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type_declaration_list"
	// /Users/twb/repos/Tiger/Tiger.g:64:1: type_declaration_list : ( type_declaration_tail ) -> ^( TYPES ( type_declaration_tail )? ) ;
	public final TigerParser.type_declaration_list_return type_declaration_list() throws RecognitionException {
		TigerParser.type_declaration_list_return retval = new TigerParser.type_declaration_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope type_declaration_tail4 =null;

		RewriteRuleSubtreeStream stream_type_declaration_tail=new RewriteRuleSubtreeStream(adaptor,"rule type_declaration_tail");

		try {
			// /Users/twb/repos/Tiger/Tiger.g:65:2: ( ( type_declaration_tail ) -> ^( TYPES ( type_declaration_tail )? ) )
			// /Users/twb/repos/Tiger/Tiger.g:65:4: ( type_declaration_tail )
			{
			// /Users/twb/repos/Tiger/Tiger.g:65:4: ( type_declaration_tail )
			// /Users/twb/repos/Tiger/Tiger.g:65:5: type_declaration_tail
			{
			pushFollow(FOLLOW_type_declaration_tail_in_type_declaration_list167);
			type_declaration_tail4=type_declaration_tail();
			state._fsp--;

			stream_type_declaration_tail.add(type_declaration_tail4.getTree());
			}

			// AST REWRITE
			// elements: type_declaration_tail
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 65:28: -> ^( TYPES ( type_declaration_tail )? )
			{
				// /Users/twb/repos/Tiger/Tiger.g:65:31: ^( TYPES ( type_declaration_tail )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPES, "TYPES"), root_1);
				// /Users/twb/repos/Tiger/Tiger.g:65:39: ( type_declaration_tail )?
				if ( stream_type_declaration_tail.hasNext() ) {
					adaptor.addChild(root_1, stream_type_declaration_tail.nextTree());
				}
				stream_type_declaration_tail.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type_declaration_list"


	public static class type_declaration_tail_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type_declaration_tail"
	// /Users/twb/repos/Tiger/Tiger.g:68:1: type_declaration_tail : ( type_declaration type_declaration_tail |);
	public final TigerParser.type_declaration_tail_return type_declaration_tail() throws RecognitionException {
		TigerParser.type_declaration_tail_return retval = new TigerParser.type_declaration_tail_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope type_declaration5 =null;
		ParserRuleReturnScope type_declaration_tail6 =null;


		try {
			// /Users/twb/repos/Tiger/Tiger.g:69:2: ( type_declaration type_declaration_tail |)
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==TYPE) ) {
				alt1=1;
			}
			else if ( (LA1_0==EOF||LA1_0==BEGIN||LA1_0==BREAK||LA1_0==FIXEDPT||LA1_0==FOR||LA1_0==ID||(LA1_0 >= IF && LA1_0 <= INT)||LA1_0==RETURN||LA1_0==VAR||(LA1_0 >= VOID && LA1_0 <= WHILE)) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// /Users/twb/repos/Tiger/Tiger.g:69:4: type_declaration type_declaration_tail
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_type_declaration_in_type_declaration_tail188);
					type_declaration5=type_declaration();
					state._fsp--;

					adaptor.addChild(root_0, type_declaration5.getTree());

					pushFollow(FOLLOW_type_declaration_tail_in_type_declaration_tail190);
					type_declaration_tail6=type_declaration_tail();
					state._fsp--;

					adaptor.addChild(root_0, type_declaration_tail6.getTree());

					}
					break;
				case 2 :
					// /Users/twb/repos/Tiger/Tiger.g:71:2: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type_declaration_tail"


	public static class type_declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type_declaration"
	// /Users/twb/repos/Tiger/Tiger.g:73:1: type_declaration : ( TYPE ID EQ type SEMI ) -> ^( TYPE ID type ) ;
	public final TigerParser.type_declaration_return type_declaration() throws RecognitionException {
		TigerParser.type_declaration_return retval = new TigerParser.type_declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token TYPE7=null;
		Token ID8=null;
		Token EQ9=null;
		Token SEMI11=null;
		ParserRuleReturnScope type10 =null;

		Object TYPE7_tree=null;
		Object ID8_tree=null;
		Object EQ9_tree=null;
		Object SEMI11_tree=null;
		RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_EQ=new RewriteRuleTokenStream(adaptor,"token EQ");
		RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// /Users/twb/repos/Tiger/Tiger.g:74:2: ( ( TYPE ID EQ type SEMI ) -> ^( TYPE ID type ) )
			// /Users/twb/repos/Tiger/Tiger.g:74:4: ( TYPE ID EQ type SEMI )
			{
			// /Users/twb/repos/Tiger/Tiger.g:74:4: ( TYPE ID EQ type SEMI )
			// /Users/twb/repos/Tiger/Tiger.g:74:5: TYPE ID EQ type SEMI
			{
			TYPE7=(Token)match(input,TYPE,FOLLOW_TYPE_in_type_declaration205);  
			stream_TYPE.add(TYPE7);

			ID8=(Token)match(input,ID,FOLLOW_ID_in_type_declaration207);  
			stream_ID.add(ID8);

			EQ9=(Token)match(input,EQ,FOLLOW_EQ_in_type_declaration209);  
			stream_EQ.add(EQ9);

			pushFollow(FOLLOW_type_in_type_declaration211);
			type10=type();
			state._fsp--;

			stream_type.add(type10.getTree());
			SEMI11=(Token)match(input,SEMI,FOLLOW_SEMI_in_type_declaration213);  
			stream_SEMI.add(SEMI11);

			}

			// AST REWRITE
			// elements: TYPE, ID, type
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 74:27: -> ^( TYPE ID type )
			{
				// /Users/twb/repos/Tiger/Tiger.g:74:30: ^( TYPE ID type )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_TYPE.nextNode(), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_1, stream_type.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type_declaration"


	public static class function_declaration_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function_declaration_list"
	// /Users/twb/repos/Tiger/Tiger.g:77:1: function_declaration_list : function_declaration_tail -> ^( FUNCTIONS ( function_declaration_tail )? ) ;
	public final TigerParser.function_declaration_list_return function_declaration_list() throws RecognitionException {
		TigerParser.function_declaration_list_return retval = new TigerParser.function_declaration_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope function_declaration_tail12 =null;

		RewriteRuleSubtreeStream stream_function_declaration_tail=new RewriteRuleSubtreeStream(adaptor,"rule function_declaration_tail");

		try {
			// /Users/twb/repos/Tiger/Tiger.g:78:2: ( function_declaration_tail -> ^( FUNCTIONS ( function_declaration_tail )? ) )
			// /Users/twb/repos/Tiger/Tiger.g:78:4: function_declaration_tail
			{
			pushFollow(FOLLOW_function_declaration_tail_in_function_declaration_list235);
			function_declaration_tail12=function_declaration_tail();
			state._fsp--;

			stream_function_declaration_tail.add(function_declaration_tail12.getTree());
			// AST REWRITE
			// elements: function_declaration_tail
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 78:30: -> ^( FUNCTIONS ( function_declaration_tail )? )
			{
				// /Users/twb/repos/Tiger/Tiger.g:78:33: ^( FUNCTIONS ( function_declaration_tail )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCTIONS, "FUNCTIONS"), root_1);
				// /Users/twb/repos/Tiger/Tiger.g:78:45: ( function_declaration_tail )?
				if ( stream_function_declaration_tail.hasNext() ) {
					adaptor.addChild(root_1, stream_function_declaration_tail.nextTree());
				}
				stream_function_declaration_tail.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function_declaration_list"


	public static class function_declaration_tail_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function_declaration_tail"
	// /Users/twb/repos/Tiger/Tiger.g:81:1: function_declaration_tail : ( function_definition function_declaration_tail |);
	public final TigerParser.function_declaration_tail_return function_declaration_tail() throws RecognitionException {
		TigerParser.function_declaration_tail_return retval = new TigerParser.function_declaration_tail_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope function_definition13 =null;
		ParserRuleReturnScope function_declaration_tail14 =null;


		try {
			// /Users/twb/repos/Tiger/Tiger.g:82:2: ( function_definition function_declaration_tail |)
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==FIXEDPT||LA2_0==ID||LA2_0==INT||LA2_0==VOID) ) {
				alt2=1;
			}
			else if ( (LA2_0==EOF) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// /Users/twb/repos/Tiger/Tiger.g:82:4: function_definition function_declaration_tail
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_function_definition_in_function_declaration_tail255);
					function_definition13=function_definition();
					state._fsp--;

					adaptor.addChild(root_0, function_definition13.getTree());

					pushFollow(FOLLOW_function_declaration_tail_in_function_declaration_tail257);
					function_declaration_tail14=function_declaration_tail();
					state._fsp--;

					adaptor.addChild(root_0, function_declaration_tail14.getTree());

					}
					break;
				case 2 :
					// /Users/twb/repos/Tiger/Tiger.g:84:2: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function_declaration_tail"


	public static class function_definition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function_definition"
	// /Users/twb/repos/Tiger/Tiger.g:86:1: function_definition : ( ( type_id function_definition_body ) -> ^( FUNCTION type_id function_definition_body ) | ( VOID function_definition_void ) -> ^( FUNCTION VOID function_definition_void ) );
	public final TigerParser.function_definition_return function_definition() throws RecognitionException {
		TigerParser.function_definition_return retval = new TigerParser.function_definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token VOID17=null;
		ParserRuleReturnScope type_id15 =null;
		ParserRuleReturnScope function_definition_body16 =null;
		ParserRuleReturnScope function_definition_void18 =null;

		Object VOID17_tree=null;
		RewriteRuleTokenStream stream_VOID=new RewriteRuleTokenStream(adaptor,"token VOID");
		RewriteRuleSubtreeStream stream_type_id=new RewriteRuleSubtreeStream(adaptor,"rule type_id");
		RewriteRuleSubtreeStream stream_function_definition_void=new RewriteRuleSubtreeStream(adaptor,"rule function_definition_void");
		RewriteRuleSubtreeStream stream_function_definition_body=new RewriteRuleSubtreeStream(adaptor,"rule function_definition_body");

		try {
			// /Users/twb/repos/Tiger/Tiger.g:87:2: ( ( type_id function_definition_body ) -> ^( FUNCTION type_id function_definition_body ) | ( VOID function_definition_void ) -> ^( FUNCTION VOID function_definition_void ) )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==FIXEDPT||LA3_0==ID||LA3_0==INT) ) {
				alt3=1;
			}
			else if ( (LA3_0==VOID) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /Users/twb/repos/Tiger/Tiger.g:87:4: ( type_id function_definition_body )
					{
					// /Users/twb/repos/Tiger/Tiger.g:87:4: ( type_id function_definition_body )
					// /Users/twb/repos/Tiger/Tiger.g:87:5: type_id function_definition_body
					{
					pushFollow(FOLLOW_type_id_in_function_definition272);
					type_id15=type_id();
					state._fsp--;

					stream_type_id.add(type_id15.getTree());
					pushFollow(FOLLOW_function_definition_body_in_function_definition274);
					function_definition_body16=function_definition_body();
					state._fsp--;

					stream_function_definition_body.add(function_definition_body16.getTree());
					}

					// AST REWRITE
					// elements: function_definition_body, type_id
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 87:39: -> ^( FUNCTION type_id function_definition_body )
					{
						// /Users/twb/repos/Tiger/Tiger.g:87:42: ^( FUNCTION type_id function_definition_body )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCTION, "FUNCTION"), root_1);
						adaptor.addChild(root_1, stream_type_id.nextTree());
						adaptor.addChild(root_1, stream_function_definition_body.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
